--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build Quartz
         run: npx quartz build
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v4
         with:
           path: public
  
@@ -40,6 +40,11 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to GitHub Pages
+      - name: Download artifact  # ✅ 确保下载构建产物
+        uses: actions/download-artifact@v4
+        with:
+          name: quartz-build
+          path: public
+      - name: Deploy to GitHub Pages  # ✅ 确保 `public` 目录正确
         id: deployment
         uses: actions/deploy-pages@v2
