--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,55 @@
+# name: Deploy Quartz site to GitHub Pages
+ 
+# on:
+#   push:
+#     branches:
+#       - v4
+ 
+# permissions:
+#   contents: read
+#   pages: write
+#   id-token: write
+ 
+# concurrency:
+#   group: "pages"
+#   cancel-in-progress: false
+ 
+# jobs:
+#   build:
+#     runs-on: ubuntu-22.04
+#     steps:
+#       - uses: actions/checkout@v3
+#         with:
+#           fetch-depth: 0 # Fetch all history for git info
+#       - uses: actions/setup-node@v3
+#         with:
+#           node-version: 18.14
+#       - name: Install Dependencies
+#         run: npm ci
+#       - name: Build Quartz
+#         run: npx quartz build
+#       - name: Upload artifact
+#         uses: actions/upload-artifact@v4  # ✅ 使用 upload-artifact@v4
+#         with:
+#           name: quartz-build
+#           path: public  # 确保这里是 Quartz 生成的目录
+ 
+#   deploy:
+#     needs: build
+#     environment:
+#       name: github-pages
+#       url: ${{ steps.deployment.outputs.page_url }}
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Download artifact  # ✅ 确保下载构建产物
+#         uses: actions/download-artifact@v4
+#         with:
+#           name: quartz-build
+#           path: public
+#       - name: Deploy to GitHub Pages  # ✅ 确保 `public` 目录正确
+#         id: deployment
+#         uses: actions/deploy-pages@v2
+
 name: Deploy Quartz site to GitHub Pages
  
 on:
@@ -18,21 +70,20 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Fetch all history for git info
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18.14
+          node-version: 22
       - name: Install Dependencies
         run: npm ci
       - name: Build Quartz
         run: npx quartz build
       - name: Upload artifact
-        uses: actions/upload-artifact@v4  # ✅ 使用 upload-artifact@v4
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: quartz-build
-          path: public  # 确保这里是 Quartz 生成的目录
+          path: public
  
   deploy:
     needs: build
@@ -41,11 +92,6 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Download artifact  # ✅ 确保下载构建产物
-        uses: actions/download-artifact@v4
-        with:
-          name: quartz-build
-          path: public
-      - name: Deploy to GitHub Pages  # ✅ 确保 `public` 目录正确
+      - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
