--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "preact-render-to-string": "^6.3.1",
     "pretty-bytes": "^6.1.1",
     "pretty-time": "^1.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-katex": "^7.0.0",
@@ -97,6 +99,8 @@
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.11.19",
     "@types/pretty-time": "^1.1.5",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "@types/source-map-support": "^0.5.10",
     "@types/ws": "^8.5.10",
     "@types/yargs": "^17.0.32",
