--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "pretty-time": "^1.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-katex": "^7.0.0",
